--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@uniswap/governance",
+  "name": "@eliteswap/governance",
   "version": "1.0.2",
-  "description": "🏛 Governance contracts for the Uniswap protocol",
+  "description": "🏛 Governance contracts for the Eliteswap protocol",
   "author": "Noah Zinsmeister",
   "license": "MIT",
   "files": [
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.3",
-    "@uniswap/v2-core": "^1.0.1",
+    "@eliteswap/v2-core": "^1.0.1",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.1.0",
     "ethereumjs-util": "^7.0.4",
