--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@eliteswap/governance",
   "version": "1.0.2",
-  "description": "🏛 Governance contracts for the Eliteswap protocol",
-  "author": "Noah Zinsmeister",
-  "license": "MIT",
+  "description": "🏛 Governance contracts for the Elite Swap protocol",
+  "author": "",
+  "license": "GPL-3.0-or-later",
   "files": [
+    "contracts",
     "build"
   ],
   "scripts": {
@@ -16,9 +17,9 @@
     "prepublishOnly": "yarn test"
   },
   "devDependencies": {
+    "@eliteswap/v2-core": "^1.0.1",
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.3",
-    "@eliteswap/v2-core": "^1.0.1",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.1.0",
     "ethereumjs-util": "^7.0.4",
@@ -28,5 +29,23 @@
     "solc": "0.5.16",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
-  }
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EthereumEliteswap/governance.git"
+  },
+  "keywords": [
+    "eliteswap",
+    "ethereum",
+    "governance",
+    "elt"
+  ],
+  "bugs": {
+    "url": "https://github.com/EthereumEliteswap/governance/issues"
+  },
+  "homepage": "https://eliteswap.org"
 }
