--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "precompile": "rimraf ./build/",
     "compile": "waffle",
     "pretest": "yarn compile",
-    "test": "mocha",
+    "test": "mocha --timeout 50000 -R mocha-multi",
     "lint": "prettier ./test/**/*.ts --check",
     "prepublishOnly": "yarn test"
   },
